--- a/testFile/reset.css
+++ b/testFile/reset.css
@@ -25,7 +25,7 @@ article,aside,dialog,footer,header,section,footer,nav,figure,menu{display:block}
 
 input,textarea,select {-webkit-appearance:none;outline:none}
 
-.testBox { width:100%; overflow:hidden;}
+.testBox { width:100%; overflow:hidden; display:block;}
 
 
 
